CARDS-1997: Increase test coverage cards-data-model-forms-impl tests Fixed failing tests